# sfac-ros2-training-assignment

./: README.md  setup_instructions.md
.github/workflows/: pr_agent.yml
assignment_1_basic/: README.md
assignment_1_basic/src/robot_data_processor/: package.xml  setup.cfg  setup.py
assignment_1_basic/src/robot_data_processor/robot_data_processor/: data_processor.py
assignment_1_basic/src/robot_interfaces/: CMakeLists.txt  package.xml
assignment_1_basic/src/robot_interfaces/msg/: SensorData.msg
assignment_1_basic/src/robot_sensor_publisher/: package.xml  setup.cfg  setup.py
assignment_1_basic/src/robot_sensor_publisher/launch/: robot_system.launch.py
assignment_1_basic/src/robot_sensor_publisher/robot_sensor_publisher/: sensor_publisher.py
assignment_1_basic/starter_templates/robot_data_processor/: package.xml  setup.py
assignment_1_basic/starter_templates/robot_interfaces/: CMakeLists.txt  package.xml
assignment_1_basic/starter_templates/robot_interfaces/msg/: SensorData.msg
assignment_1_basic/starter_templates/robot_sensor_publisher/: CMakeLists.txt  package.xml  setup.py
assignment_2_intermediate/: README.md
assignment_2_intermediate/src/robot_control_service/: package.xml  setup.cfg  setup.py
assignment_2_intermediate/src/robot_control_service/robot_control_service/: robot_service_node.py
assignment_2_intermediate/src/robot_interfaces/: CMakeLists.txt  package.xml
assignment_2_intermediate/src/robot_interfaces/action/: ProcessData.action
assignment_2_intermediate/src/robot_interfaces/srv/: RobotControl.srv
assignment_2_intermediate/src/robot_lifecycle_manager/: package.xml  setup.cfg  setup.py
assignment_2_intermediate/src/robot_lifecycle_manager/robot_lifecycle_manager/: lifecycle_manager.py
assignment_2_intermediate/src/robot_processing_action/: package.xml  setup.cfg  setup.py
assignment_2_intermediate/src/robot_processing_action/robot_processing_action/: action_server.py
assignment_2_intermediate/starter_templates/robot_control_service/srv/: RobotControl.srv
assignment_2_intermediate/starter_templates/robot_processing_action/action/: ProcessData.action
assignment_3_advanced/: README.md
assignment_3_advanced/src/robot_navigation/: package.xml  setup.py
assignment_3_advanced/src/robot_navigation/config/: model03.pgm  model03.yaml  nav2_params.yaml
assignment_3_advanced/src/robot_navigation/launch/: nav2_node.launch.py  nav2_only.launch.py
assignment_3_advanced/src/robot_simulation/: package.xml  setup.py
assignment_3_advanced/src/robot_simulation/launch/: gazebo_world.launch.py
assignment_3_advanced/src/robot_simulation/urdf/: my_robot.urdf  my_robot.urdf.xacro
assignment_3_advanced/src/robot_slam/: CMakeLists.txt  package.xml
assignment_3_advanced/src/robot_slam/config/: slam_params.yaml
assignment_3_advanced/src/robot_slam/launch/: slam_launch.py
assignment_3_advanced/starter_templates/robot_simulation/launch/: gazebo_world.launch.py
bonus_assignments/: README.md
bonus_assignments/starter_templates/cpp_publisher_subscriber/: CMakeLists.txt  package.xml
miniproject/e-car_readiness_gauntlet/: README.md
miniproject/e-car_readiness_gauntlet/battery_monitoring/: README.md
miniproject/e-car_readiness_gauntlet/robot_action/: README.md
