<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelist="xs:string"?>
<package format="3">
  <name>robot_data_processor</name>
  <version>0.0.0</version>
  <description>ROS2 package for processing sensor data</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <!-- Add your dependencies here -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!-- TODO: Add dependency on robot_sensor_publisher for custom messages -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 