<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelist="xs:string"?>
<package format="3">
  <name>cpp_sensor_publisher</name>
  <version>0.0.0</version>
  <description>C++ implementation of ROS2 sensor publisher</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 C++ dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <!-- TODO: Add custom message dependencies -->
  <!-- <depend>robot_sensor_publisher</depend> -->

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 